Implemeted OSAgent and directory listing

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,14 @@ dist/
 
 # Temporary keys for testing purposes
 *.pem
+
+# NodeJS
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+frontend/build/
+frontend/dist/
+.next/
+out/
+.vite/
