Config example changes

--- a/app/config_client_example.json
+++ b/app/config_client_example.json
@@ -2,6 +2,6 @@
     "server_address": "localhost",
     "server_port": 36912,
     "server_public_key_path": "pub_key.pem",
-    "client_id": "TEST-1",
-    "client_secret": "abcdefgh"
+    "client_id": "<CLIENT ID>",
+    "client_secret": "<CLIENT SECRET>"
 }
